# ACGL-Template

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  main.cpp  run.sh  vcpkg.json
src/: main.cpp
